# RAG_Sanskrit_Dhruva

./: .gitignore  README.md  pyproject.toml
code/: app.py  embedder.py  generator.py  loader.py  preprocessing.py  rag_pipeline.py  requirements.txt  retriever.py
code/rag_sanskrit/: config.py  init.py  loader.py  utils.py
data/processed/: chunks.json  embeddings.npy
