[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-sanskrit"
version = "0.1.0"
description = "CPU-only Sanskrit Document RAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="AI-ML Intern"}]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
